--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Counter</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="counter">
+            <h1>Counter</h1>
+            <h1 id="count">0</h1>
+            <div>
+                <button type="button" class="btn btn-outline-dark" onclick="changeCount(1)">Increase</button>
+                <button type="button" class="btn btn-outline-dark" onclick="changeCount(-1)">Decrease</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
